--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
         <div
           class="h-[70px] lg:h-[100px] rounded-2xl bg-white flex items-center justify-between p-4 lg:p-6"
         >
-          <a href="#" class="flex items-center gap-2 lg:gap-3">
+          <a href="./index.html" class="flex items-center gap-2 lg:gap-3">
             <img src="./assets/logo.png" alt="logo" class="w-8 lg:w-full" />
             <h1 class="text-2xl lg:text-3xl font-bold text-[#00303C]">
               <span class="font-normal">Dev</span>Board
